src/test/deca/etapeB/invalid/plus_int_string.deca
// Description : test de plus sur un entier et un string
// 	 
//Resultat:
//      Erreur Contextuelle : addition d'un entier et un string
//      Ligne 8 : ./src/test/deca/etapeB/invalid/plus_int_string.deca:2:8: type not expected
{
   3+"hello";
}